--- a/index.html
+++ b/index.html
@@ -207,7 +207,10 @@
     }
   </script>
 
-  <script src="js/game.js"></script>
+  <script src="js/stat.js"></script>
+
+  <script src="js/game.js" type="application/javascript"></script>
 
 </body>
+
 </html>
