--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
     }
   </script>
 
+  <script src="js/setup.js"></script>
+
   <script src="js/stat.js"></script>
 
   <script src="js/game.js" type="application/javascript"></script>
